Fix too big img for profile

--- a/frontend/src/css/components/popup.css
+++ b/frontend/src/css/components/popup.css
@@ -30,3 +30,8 @@
 .hidePopup {
   display: none;
 }
+
+.profile-img-preview {
+  height: 50px;
+  width: auto;
+}
